[package]
name = "rust-orderbook-2"
version = "0.1.0"
edition = "2024"


[dependencies]
slotmap = "1.0"
tokio  = { version = "1.48.0", features = ["full"] }
clap = {version = "4.5.51" , features = ["derive"]}
env_logger = "0.11.8"
log = "0.4.28"
memmap2 = "0.9.9"
rand = "0.9.2"
static_assertions = "1.1.0"
kanal = "0.1"
core_affinity = "0.8"
crossbeam = "0.8.4"
dashmap = "6.1.0"
