[package]
name = "rust-orderbook-2"
version = "0.1.0"
edition = "2024"



[dependencies]
slotmap = "1.0"
tokio  = { version = "1.48.0", features = ["full"] }
clap = {version = "4.5.51" , features = ["derive"]}
env_logger = "0.11.8"
log = "0.4.28"
memmap2 = "0.9.9"
rand = "0.9.2"
static_assertions = "1.1.0"
kanal = "0.1"
core_affinity = "0.8"
crossbeam = "0.8.4"
dashmap = "6.1.0"
rustc-hash = { version = "2.1" }
tonic = "0.14.2"
prost = "0.14.1"
hotpath = "0.8"
crossbeam-utils = "0.8.21"
thiserror = "2.0.17"
redis = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
bounded-spsc-queue = "0.4"




[[bin]]
name = "producer"
path = "src/bin/producer.rs"

[[bin]]
name = "single_threaded_consumer"
path = "src/bin/single_threaded_consumer.rs"


[build-dependencies]
tonic-build = "0.11" 


[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
hotpath-off = ["hotpath/hotpath-off"]


[profile.release]
debug = true